log/build_2021-10-03_11-34-43/raspimouse_ros2/stderr.log
  File "/home/ubuntu/ros2_ws/install/raspimouse_ros2/lib/python3.8/site-packages/raspimouse/buzzer4_sub_node.py", line 66
    goal_handle.succeed() = True
    ^
SyntaxError: cannot assign to function call

